# agent-second-brain

./: .github_user  pyproject.toml  setup.sh
deploy/: dbrain-bot.service  dbrain-watchdog.service
scripts/: notify.sh  process.sh
src/d_brain/: pipeline.py
src/d_brain/bot/: keyboards.py  main.py
src/d_brain/bot/handlers/: __init__.py  buttons.py  chat.py  commands.py
src/d_brain/services/: chat_session.py  claude_session.py  cron_runner.py  cron_store.py  processor.py  runtime.py  storage.py
tests/: test_chat_handler.py  test_chat_session.py  test_claude_session.py  test_cron_runner.py  test_cron_skill_contract.py  test_pipeline.py  test_processor.py
vault/: MEMORY.md
vault/.claude/: settings.json
vault/.claude/rules/: telegram-report.md
vault/.claude/skills/apple-reminders/: SKILL.md
vault/.claude/skills/apple-reminders/scripts/: add_reminder.py
vault/.claude/skills/cron/: SKILL.md
vault/.sessions/: 668551670.jsonl
vault/blog/: 2025-01-10-vibe-coding-guide.md  2026-01-08-consumer-ai-2030-predictions.md
vault/clients/: АллоХа.md  ЛикиЛайбел.md  МирСити.md  ПитЛайн.md  Примабелла.md  Цифровой Диалог.md  Шен.md  ЮвиЛаве.md
vault/goals/: 0-vision-3y.md  1-yearly-2026.md  2-monthly.md  3-weekly.md
vault/templates/: crm-template.md
