[project]
name = "agent-second-brain"
version = "3.0.3"
description = "Voice-first personal assistant for Telegram with an Obsidian second brain"
readme = "README.md"
authors = [
    { name = "smixs", email = "mixshima@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0,<4",
    "caldav>=3.2.1",
    "croniter>=2.0,<7",
    "deepgram-sdk>=5.3,<6",
    "httpx>=0.28,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "d_brain"

[tool.ruff]
line-length = 88
target-version = "py312"
# vault/ is the agent's workspace — skills there keep their own style;
# the bot's lint gate covers src/ and tests/ only.
extend-exclude = ["vault"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9",
]
